add explanation of each blending briefly(test)

--- a/main.ipynb
+++ b/main.ipynb
@@ -875,10 +875,13 @@
     "                src, target, mask, center, cv2.MIXED_CLONE\n",
     "            )\n",
     "        case blend_mode.laplacian:\n",
+    "            # laplacian dist\n",
     "            return\n",
     "        case blend_mode.grad:\n",
+    "            # gradient\n",
     "            return\n",
     "        case blend_mode.dl:\n",
+    "            # dl model\n",
     "            return\n",
     "\n",
     "    return result"
