create utils py and blending ipynb

--- a/main.ipynb
+++ b/main.ipynb
@@ -1,38 +1,13 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "0c5af447",
-   "metadata": {},
-   "source": [
-    "git test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "40c430cf",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "git test4444\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"git test4444\")"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0d1df3bf",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# from desktop w/ gpu\n",
     "import tensorflow as tf\n",
     "import numpy as np\n",
     "import cv2\n",
@@ -60,67 +35,38 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0027ae13",
+   "id": "51b8786c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[빌드 정보] CUDA 사용 여부: YES\n",
-      "\n",
-      "[장치 확인] CUDA 지원 GPU 수: 1\n",
-      "\n",
-      "[테스트 결과] GPU 연산 성공!\n"
+      "4.11.0\n"
      ]
     }
    ],
    "source": [
+    "# from laptop w/o gpu\n",
+    "import numpy as np\n",
     "import cv2\n",
+    "import time\n",
+    "import os\n",
+    "from enum import Enum\n",
+    "import matplotlib.pyplot as plt\n",
+    "from collections import defaultdict\n",
+    "from PIL import Image\n",
     "\n",
-    "# 1. OpenCV 빌드 정보 확인 (CUDA 컴파일 여부)\n",
-    "build_info = cv2.getBuildInformation()\n",
-    "print(\"[빌드 정보] CUDA 사용 여부:\", \"YES\" if \"CUDA\" in build_info else \"NO\")\n",
-    "\n",
-    "# 2. CUDA 가능 장치 수 확인\n",
-    "try:\n",
-    "    cuda_device_count = cv2.cuda.getCudaEnabledDeviceCount()\n",
-    "    print(f\"\\n[장치 확인] CUDA 지원 GPU 수: {cuda_device_count}\")\n",
-    "    \n",
-    "    if cuda_device_count > 0:\n",
-    "        # 3. 실제 GPU 연산 테스트\n",
-    "        img = cv2.imread('Lenna_(test_image).png')\n",
-    "        \n",
-    "        # CPU에서 GPU로 이미지 업로드\n",
-    "        gpu_img = cv2.cuda_GpuMat()\n",
-    "        gpu_img.upload(img)\n",
-    "        \n",
-    "        # GPU에서 그레이스케일 변환\n",
-    "        gpu_gray = cv2.cuda.cvtColor(gpu_img, cv2.COLOR_BGR2GRAY)\n",
-    "        \n",
-    "        # GPU에서 CPU로 다운로드\n",
-    "        result = gpu_gray.download()\n",
-    "        print(\"\\n[테스트 결과] GPU 연산 성공!\")\n",
-    "    else:\n",
-    "        print(\"\\n[경고] CUDA 지원 GPU가 감지되지 않았습니다.\")\n",
-    "\n",
-    "except AttributeError:\n",
-    "    print(\"\\n[에러] OpenCV가 CUDA 지원 버전으로 빌드되지 않았습니다.\")\n",
-    "except cv2.error as e:\n",
-    "    print(f\"\\n[에러] GPU 연산 실패: {e}\")\n"
+    "print(cv2.__version__)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "881c7604",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "from collections import defaultdict\n",
-    "from PIL import Image\n",
-    "\n",
     "def rename_images_by_resolution(folder_path):\n",
     "    # 해상도별로 파일 개수를 기록할 딕셔너리\n",
     "    resolution_count = defaultdict(int)\n",
@@ -860,6 +806,16 @@
     "수정 필요한 거\n",
     "- 여러개 선택\n",
     "- 원본 부분 이미지 합칠 때 경계의 부자연스러움 처리(블렌딩, 브러쉬처럼 특정부분 weight 바꾸기)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc71e266",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_path = 'Lenna_(test_image).png'\n"
    ]
   },
   {
