--- a/blending.ipynb
+++ b/blending.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "cd74f66a",
+   "metadata": {},
+   "source": [
+    "# About blending\n",
+    "\n",
+    "여기에 블렌딩 작업"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "566ffee3",
