combine all func into utils

--- a/main.ipynb
+++ b/main.ipynb
@@ -17,6 +17,7 @@
     "import keras_cv\n",
     "import keras\n",
     "import matplotlib.pyplot as plt\n",
+    "from utils import *\n",
     "\n",
     "print(keras_cv.__version__)\n",
     "print(keras.__version__)\n",
@@ -29,12 +30,13 @@
     "from tensorflow.python.client import device_lib\n",
     "\n",
     "print(device_lib.list_local_devices() )\n",
-    "print(cv2.getBuildInformation())\n"
+    "print(cv2.getBuildInformation())\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "51b8786c",
    "metadata": {},
    "outputs": [
@@ -56,52 +58,9 @@
     "import matplotlib.pyplot as plt\n",
     "from collections import defaultdict\n",
     "from PIL import Image\n",
+    "from utils import *\n",
     "\n",
     "print(cv2.__version__)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "881c7604",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def rename_images_by_resolution(folder_path):\n",
-    "    # 해상도별로 파일 개수를 기록할 딕셔너리\n",
-    "    resolution_count = defaultdict(int)\n",
-    "\n",
-    "    # 폴더 내 모든 png 파일 목록\n",
-    "    files = [f for f in os.listdir(folder_path) if f.lower().endswith('.png')]\n",
-    "\n",
-    "    for file_name in files:\n",
-    "        file_path = os.path.join(folder_path, file_name)\n",
-    "        try:\n",
-    "            with Image.open(file_path) as img:\n",
-    "                width, height = img.size\n",
-    "                resolution = f\"{width}x{height}\"\n",
-    "\n",
-    "                # 해당 해상도 파일 개수 증가\n",
-    "                resolution_count[resolution] += 1\n",
-    "                count = resolution_count[resolution]\n",
-    "\n",
-    "                # 새 파일명 생성\n",
-    "                if count == 1:\n",
-    "                    new_name = f\"{resolution}.png\"\n",
-    "                else:\n",
-    "                    new_name = f\"{resolution}-{count-1}.png\"\n",
-    "\n",
-    "                new_path = os.path.join(folder_path, new_name)\n",
-    "\n",
-    "                # 파일명 변경\n",
-    "                os.rename(file_path, new_path)\n",
-    "                print(f\"Renamed '{file_name}' to '{new_name}'\")\n",
-    "\n",
-    "        except Exception as e:\n",
-    "            print(f\"Error processing {file_name}: {e}\")\n",
-    "\n",
-    "# 사용 예시 (폴더 경로를 원하는 경로로 바꿔서 사용)\n",
-    "# rename_images_by_resolution('sample-images-png')\n"
    ]
   },
   {
@@ -178,56 +137,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "24f514b7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for _ in range(10):\n",
-    "    sr = cv2.dnn_superres.DnnSuperResImpl_create()\n",
-    "    sr.readModel('models/EDSR_x3.pb')\n",
-    "    sr.setPreferableBackend(cv2.dnn.DNN_BACKEND_CUDA)\n",
-    "    sr.setPreferableTarget(cv2.dnn.DNN_TARGET_CUDA)\n",
-    "    sr.setModel('edsr', 3)\n",
-    "    result = sr.upsample(img)\n",
-    "\n",
-    "# 100 x 100, 10 frames, x3: 3.7s\n",
-    "# 100 x 100, 100 frames, x3: 39.5s\n",
-    "\n",
-    "# 200 x 200, 10 frames, x3: 7.8s\n",
-    "# 200 x 200, 100 frames, x3: 75.3s\n",
-    "\n",
-    "# 300 x 300, 10 frames, x3: 15.8s\n",
-    "\n",
-    "# 400 x 400, 10 frames, x3: 23.7s\n",
-    "\n",
-    "# 500 x 500, 10 frames, x3: 38.4s\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "id": "c9c7a198",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sr = cv2.dnn_superres.DnnSuperResImpl_create()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "76dd43a7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv2.imshow('res', result)\n",
-    "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "id": "7c78f8b8",
    "metadata": {},
@@ -246,101 +155,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "a7fa9f42",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def upscale_img(image_path, scaler):\n",
-    "    img = cv2.imread(image_path)\n",
-    "    if img is None:\n",
-    "        print(f\"Error loading image: {image_path}\")\n",
-    "        return None\n",
-    "    if scaler not in [2, 3, 4]:\n",
-    "        print(f\"Invalid scaler value: {scaler}. Must be 2, 3 or 4.\")\n",
-    "        return None\n",
-    "    if not cv2.cuda.getCudaEnabledDeviceCount():\n",
-    "        print(\"No CUDA-enabled GPU found.\")\n",
-    "        return None\n",
-    "\n",
-    "    sr = cv2.dnn_superres.DnnSuperResImpl_create()\n",
-    "    try:\n",
-    "        sr.readModel(f'models/EDSR_x{scaler}.pb')\n",
-    "    except Exception as e:\n",
-    "        print(f\"Error reading model: {e}\")\n",
-    "        return None\n",
-    "\n",
-    "    # gpu acceleration\n",
-    "    sr.setPreferableBackend(cv2.dnn.DNN_BACKEND_CUDA)\n",
-    "    sr.setPreferableTarget(cv2.dnn.DNN_TARGET_CUDA)\n",
-    "\n",
-    "    sr.setModel('edsr', scaler)\n",
-    "\n",
-    "    try:\n",
-    "        result = sr.upsample(img)\n",
-    "    except Exception as e:\n",
-    "        print(f\"Error during upscaling: {e}\")\n",
-    "        return None\n",
-    "\n",
-    "    return result\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "fa497dd2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def downscale_img(image_path, scaler):\n",
-    "    img = cv2.imread(image_path)\n",
-    "    if img is None:\n",
-    "        print(f\"Error loading image: {image_path}\")\n",
-    "        return None\n",
-    "    new_h, new_w = img.shape[0]//scaler, img.shape[1]//scaler\n",
-    "\n",
-    "    result = cv2.resize(img, (new_w, new_h), interpolation=cv2.INTER_AREA)\n",
-    "\n",
-    "    return result\n",
-    "\n",
-    "# test_img = downscale_img('Lenna_(test_image).png', 2)\n",
-    "\n",
-    "# cv2.imshow('test_img', test_img)\n",
-    "# cv2.waitKey(0)\n",
-    "# cv2.destroyAllWindows()\n",
-    "\n",
-    "# print(test_img.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "ab0d9cd5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def specify_part_of_original(image_path, r_from, r_to, c_from, c_to):\n",
-    "    img = cv2.imread(image_path)\n",
-    "    if img is None:\n",
-    "        print(f\"Error loading image: {image_path}\")\n",
-    "        return None\n",
-    "    \n",
-    "    # 클릭, 드래그 등으로 지정\n",
-    "    # r_from = 100\n",
-    "    # r_to = 300\n",
-    "    # c_from = 200\n",
-    "    # c_to = 400\n",
-    "\n",
-    "    return img[r_from:r_to, c_from:c_to]\n",
-    "\n",
-    "# test_img = specify_part_of_original('Lenna_(test_image).png')\n",
-    "# cv2.imshow('test_img', test_img)\n",
-    "# cv2.waitKey(0)\n",
-    "# cv2.destroyAllWindows()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "ee040079",
    "metadata": {},
@@ -352,103 +166,6 @@
     "- poly\n",
     "- curve\n",
     "- etc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "02c611ba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class ROI_mode(Enum):\n",
-    "    Rectengle = 0\n",
-    "    Polygon = 1\n",
-    "\n",
-    "def crop_by_drag(image_path, mode=ROI_mode.Rectengle):\n",
-    "    # 이미지 불러오기\n",
-    "    img = cv2.imread(image_path)\n",
-    "    if img is None:\n",
-    "        print(\"이미지를 불러올 수 없습니다.\")\n",
-    "        return\n",
-    "\n",
-    "    # ROI(관심영역) 선택 창 띄우기 (마우스로 드래그)\n",
-    "    x, y, w, h = cv2.selectROI(\"이미지에서 영역을 드래그하세요\", img, showCrosshair=True, fromCenter=False)\n",
-    "\n",
-    "    # ROI가 정상적으로 선택된 경우에만 진행\n",
-    "    if w > 0 and h > 0:\n",
-    "        roi = img[y:y+h, x:x+w]\n",
-    "        cv2.imshow(\"선택된 영역\", roi)\n",
-    "        cv2.waitKey(0)\n",
-    "        cv2.destroyAllWindows()\n",
-    "    else:\n",
-    "        print(\"영역이 선택되지 않았습니다.\")\n",
-    "        cv2.waitKey(0)\n",
-    "        cv2.destroyAllWindows()\n",
-    "\n",
-    "# 사용 예시\n",
-    "# crop_by_drag('Lenna_(test_image).png')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "877945a5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 마우스 콜백 함수\n",
-    "drawing = False\n",
-    "points = []\n",
-    "\n",
-    "def draw_polygon(event, x, y, flags, param):\n",
-    "    global drawing, points\n",
-    "    if event == cv2.EVENT_LBUTTONDOWN:\n",
-    "        points.append((x, y))\n",
-    "    elif event == cv2.EVENT_RBUTTONDOWN and len(points) >= 3:\n",
-    "        drawing = False  # 다각형 닫기\n",
-    "\n",
-    "def select_polygon_roi(image_path):\n",
-    "    global drawing, points\n",
-    "    img = cv2.imread(image_path)\n",
-    "    clone = img.copy()\n",
-    "    cv2.namedWindow(\"이미지에서 다각형 ROI 지정\")\n",
-    "    cv2.setMouseCallback(\"이미지에서 다각형 ROI 지정\", draw_polygon)\n",
-    "\n",
-    "    drawing = True\n",
-    "    while drawing:\n",
-    "        temp = clone.copy()\n",
-    "        if len(points) > 0:\n",
-    "            cv2.polylines(temp, [np.array(points)], False, (0,255,0), 2)\n",
-    "            for pt in points:\n",
-    "                cv2.circle(temp, pt, 3, (0,0,255), -1)\n",
-    "        cv2.imshow(\"이미지에서 다각형 ROI 지정\", temp)\n",
-    "        key = cv2.waitKey(1)\n",
-    "        if key == 27:  # ESC로 취소\n",
-    "            points = []\n",
-    "            break\n",
-    "        if key == ord('s') and len(points) >= 3:  # 's'로 저장\n",
-    "            drawing = False\n",
-    "\n",
-    "    if len(points) >= 3:\n",
-    "        mask = np.zeros(img.shape[:2], dtype=np.uint8)\n",
-    "        cv2.fillPoly(mask, [np.array(points)], 255)\n",
-    "        roi = cv2.bitwise_and(img, img, mask=mask)\n",
-    "        # 다각형의 bounding box로 crop\n",
-    "        pts = np.array(points)\n",
-    "        x, y, w, h = cv2.boundingRect(pts)\n",
-    "        cropped = roi[y:y+h, x:x+w]\n",
-    "        cv2.imshow(\"다각형 ROI\", cropped)\n",
-    "        cv2.waitKey(0)\n",
-    "    else:\n",
-    "        print(\"3개 이상의 꼭짓점이 필요합니다.\")\n",
-    "\n",
-    "    cv2.destroyAllWindows()\n",
-    "    return cropped, (y, y+h, x, x+w)\n",
-    "\n",
-    "cropped_test_img, loc = select_polygon_roi('Lenna_(test_image).png')\n",
-    "# 사용 예시\n",
-    "# cv2.imshow('cropped', select_polygon_roi('Lenna_(test_image).png'))\n"
    ]
   },
   {
@@ -634,28 +351,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "2eb5a17f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def combine_images(A, B):\n",
-    "    \"\"\"\n",
-    "    A: (H, W, 3) shape의 넘파이 배열 (검은색 픽셀 기준)\n",
-    "    B: (H, W, 3) shape의 넘파이 배열 (A의 검은 픽셀 대체용)\n",
-    "    \"\"\"\n",
-    "    # 1. A 이미지에서 검은색 픽셀 마스크 생성\n",
-    "    black_mask = np.all(A == [0, 0, 0], axis=2)\n",
-    "    \n",
-    "    # 2. 3채널에 적용 가능하도록 차원 확장\n",
-    "    mask_3d = black_mask[:, :, np.newaxis]\n",
-    "    \n",
-    "    # 3. 조건에 따라 픽셀 선택\n",
-    "    return np.where(mask_3d, B, A)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
    "id": "5cecdf5d",
    "metadata": {},
@@ -726,53 +421,6 @@
    "metadata": {},
    "source": [
     "합칠 떄 [0 0 0] 은 스킵하도록 해야함(shape 유지)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "1f689161",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "검은 픽셀 개수: 750\n",
-      "전체 픽셀 개수: 11662\n",
-      "검은 픽셀 비율: 6.4311%\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.06431143886125879"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def black_pixel_ratio(image_path):\n",
-    "    img = cv2.imread(image_path)\n",
-    "    if img is None:\n",
-    "        raise ValueError(\"이미지를 불러올 수 없습니다.\")\n",
-    "\n",
-    "    # (H, W, 3) 배열에서 [0,0,0]인 픽셀 찾기\n",
-    "    black_mask = np.all(img == [0, 0, 0], axis=2)\n",
-    "    # axis=2: channel -> (h, w, c) 에서 c 가 사라진 (h, w) 로 리턴 shape\n",
-    "    black_count = np.sum(black_mask)\n",
-    "    total_pixels = img.shape[0] * img.shape[1]\n",
-    "    ratio = black_count / total_pixels\n",
-    "\n",
-    "    print(f\"검은 픽셀 개수: {black_count}\")\n",
-    "    print(f\"전체 픽셀 개수: {total_pixels}\")\n",
-    "    print(f\"검은 픽셀 비율: {ratio:.4%}\")\n",
-    "    return ratio\n",
-    "\n",
-    "black_pixel_ratio('cropped.png')\n"
    ]
   },
   {
