--- a/main.ipynb
+++ b/main.ipynb
@@ -196,19 +196,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "a8d7a1b8",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "qt.qpa.plugin: Could not find the Qt platform plugin \"wayland\" in \"/home/primarina314/anaconda3/envs/mrs3/lib/python3.13/site-packages/cv2/qt/plugins\"\n"
+     ]
+    },
+    {
+     "ename": "error",
+     "evalue": "OpenCV(4.11.0) /io/opencv/modules/highgui/src/window_QT.cpp:753: error: (-27:Null pointer) NULL window handler in function 'cvSetMouseCallback'\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31merror\u001b[39m                                     Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      5\u001b[39m original_part_path = \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00moutput_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m/original_part.png\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      6\u001b[39m downscaled_part_path = \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00moutput_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m/downscaled_part.png\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m original_part, original_part_loc = select_polygon_roi(img_path)\n\u001b[32m      9\u001b[39m downscaled_part = downscale_img(img_path, scaler)\n\u001b[32m     11\u001b[39m cv2.imwrite(original_part_path, original_part)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/Projects/MRS3/utils.py:65\u001b[39m, in \u001b[36mselect_polygon_roi\u001b[39m\u001b[34m(image_path)\u001b[39m\n\u001b[32m     63\u001b[39m clone = img.copy()\n\u001b[32m     64\u001b[39m cv2.namedWindow(\u001b[33m\"\u001b[39m\u001b[33m이미지에서 다각형 ROI 지정\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m65\u001b[39m cv2.setMouseCallback(\u001b[33m\"\u001b[39m\u001b[33m이미지에서 다각형 ROI 지정\u001b[39m\u001b[33m\"\u001b[39m, draw_polygon)\n\u001b[32m     67\u001b[39m drawing = \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m     68\u001b[39m \u001b[38;5;28;01mwhile\u001b[39;00m drawing:\n",
+      "\u001b[31merror\u001b[39m: OpenCV(4.11.0) /io/opencv/modules/highgui/src/window_QT.cpp:753: error: (-27:Null pointer) NULL window handler in function 'cvSetMouseCallback'\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
