--- a/main.ipynb
+++ b/main.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "51b8786c",
    "metadata": {},
    "outputs": [
@@ -148,46 +148,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43bd5d99",
-   "metadata": {},
-   "source": [
-    "# viewer func"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ee040079",
-   "metadata": {},
-   "source": [
-    "# Select ROI\n",
-    "\n",
-    "Mode 2+ 개 나눠서 옵션\n",
-    "- rect\n",
-    "- poly\n",
-    "- curve\n",
-    "- etc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "07d487f3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(206, 346, 178, 414)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(loc)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "deb0f1e7",
    "metadata": {},
    "source": [
@@ -196,39 +156,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "a8d7a1b8",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "qt.qpa.plugin: Could not find the Qt platform plugin \"wayland\" in \"/home/primarina314/anaconda3/envs/mrs3/lib/python3.13/site-packages/cv2/qt/plugins\"\n"
-     ]
-    },
-    {
-     "ename": "error",
-     "evalue": "OpenCV(4.11.0) /io/opencv/modules/highgui/src/window_QT.cpp:753: error: (-27:Null pointer) NULL window handler in function 'cvSetMouseCallback'\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31merror\u001b[39m                                     Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      5\u001b[39m original_part_path = \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00moutput_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m/original_part.png\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      6\u001b[39m downscaled_part_path = \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00moutput_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m/downscaled_part.png\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m original_part, original_part_loc = select_polygon_roi(img_path)\n\u001b[32m      9\u001b[39m downscaled_part = downscale_img(img_path, scaler)\n\u001b[32m     11\u001b[39m cv2.imwrite(original_part_path, original_part)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/Projects/MRS3/utils.py:65\u001b[39m, in \u001b[36mselect_polygon_roi\u001b[39m\u001b[34m(image_path)\u001b[39m\n\u001b[32m     63\u001b[39m clone = img.copy()\n\u001b[32m     64\u001b[39m cv2.namedWindow(\u001b[33m\"\u001b[39m\u001b[33m이미지에서 다각형 ROI 지정\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m65\u001b[39m cv2.setMouseCallback(\u001b[33m\"\u001b[39m\u001b[33m이미지에서 다각형 ROI 지정\u001b[39m\u001b[33m\"\u001b[39m, draw_polygon)\n\u001b[32m     67\u001b[39m drawing = \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m     68\u001b[39m \u001b[38;5;28;01mwhile\u001b[39;00m drawing:\n",
-      "\u001b[31merror\u001b[39m: OpenCV(4.11.0) /io/opencv/modules/highgui/src/window_QT.cpp:753: error: (-27:Null pointer) NULL window handler in function 'cvSetMouseCallback'\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
