add and combine mrs3_compress

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,10 +2,211 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0d1df3bf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-05-02 15:48:57.576780: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-05-02 15:48:57.594246: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2025-05-02 15:48:57.594332: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-05-02 15:48:57.594922: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-05-02 15:48:57.598391: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI AVX512_BF16 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2025-05-02 15:48:58.174706: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend\n",
+      "0.9.0\n",
+      "2.15.0\n",
+      "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n",
+      "4.12.0-dev\n",
+      "1\n",
+      "2.15.0\n",
+      "[name: \"/device:CPU:0\"\n",
+      "device_type: \"CPU\"\n",
+      "memory_limit: 268435456\n",
+      "locality {\n",
+      "}\n",
+      "incarnation: 10551654327904314155\n",
+      "xla_global_id: -1\n",
+      ", name: \"/device:GPU:0\"\n",
+      "device_type: \"GPU\"\n",
+      "memory_limit: 10177478656\n",
+      "locality {\n",
+      "  bus_id: 1\n",
+      "  links {\n",
+      "  }\n",
+      "}\n",
+      "incarnation: 4929774049504388957\n",
+      "physical_device_desc: \"device: 0, name: NVIDIA GeForce RTX 3060, pci bus id: 0000:01:00.0, compute capability: 8.6\"\n",
+      "xla_global_id: 416903419\n",
+      "]\n",
+      "\n",
+      "General configuration for OpenCV 4.12.0-dev =====================================\n",
+      "  Version control:               4.11.0-356-g325e59bd4c\n",
+      "\n",
+      "  Extra modules:\n",
+      "    Location (extra):            /home/primarina314/opencv_contrib/modules\n",
+      "    Version control (extra):     4.11.0-42-gacd145f4\n",
+      "\n",
+      "  Platform:\n",
+      "    Timestamp:                   2025-04-28T09:41:11Z\n",
+      "    Host:                        Linux 5.15.167.4-microsoft-standard-WSL2 x86_64\n",
+      "    CMake:                       3.31.2\n",
+      "    CMake generator:             Unix Makefiles\n",
+      "    CMake build tool:            /usr/bin/gmake\n",
+      "    Configuration:               RELEASE\n",
+      "    Algorithm Hint:              ALGO_HINT_ACCURATE\n",
+      "\n",
+      "  CPU/HW features:\n",
+      "    Baseline:                    SSE SSE2 SSE3\n",
+      "      requested:                 SSE3\n",
+      "    Dispatched code generation:  SSE4_1 SSE4_2 AVX FP16 AVX2 AVX512_SKX\n",
+      "      SSE4_1 (19 files):         + SSSE3 SSE4_1\n",
+      "      SSE4_2 (2 files):          + SSSE3 SSE4_1 POPCNT SSE4_2\n",
+      "      AVX (10 files):            + SSSE3 SSE4_1 POPCNT SSE4_2 AVX\n",
+      "      FP16 (1 files):            + SSSE3 SSE4_1 POPCNT SSE4_2 AVX FP16\n",
+      "      AVX2 (39 files):           + SSSE3 SSE4_1 POPCNT SSE4_2 AVX FP16 AVX2 FMA3\n",
+      "      AVX512_SKX (8 files):      + SSSE3 SSE4_1 POPCNT SSE4_2 AVX FP16 AVX2 FMA3 AVX_512F AVX512_COMMON AVX512_SKX\n",
+      "\n",
+      "  C/C++:\n",
+      "    Built as dynamic libs?:      YES\n",
+      "    C++ standard:                11\n",
+      "    C++ Compiler:                /usr/bin/c++  (ver 11.4.0)\n",
+      "    C++ flags (Release):         -fsigned-char -ffast-math -fno-finite-math-only -W -Wall -Wreturn-type -Wnon-virtual-dtor -Waddress -Wsequence-point -Wformat -Wformat-security -Wmissing-declarations -Wundef -Winit-self -Wpointer-arith -Wshadow -Wsign-promo -Wuninitialized -Wsuggest-override -Wno-delete-non-virtual-dtor -Wno-comment -Wimplicit-fallthrough=3 -Wno-strict-overflow -fdiagnostics-show-option -pthread -fomit-frame-pointer -ffunction-sections -fdata-sections  -msse3 -fvisibility=hidden -fvisibility-inlines-hidden -O3 -DNDEBUG  -DNDEBUG\n",
+      "    C++ flags (Debug):           -fsigned-char -ffast-math -fno-finite-math-only -W -Wall -Wreturn-type -Wnon-virtual-dtor -Waddress -Wsequence-point -Wformat -Wformat-security -Wmissing-declarations -Wundef -Winit-self -Wpointer-arith -Wshadow -Wsign-promo -Wuninitialized -Wsuggest-override -Wno-delete-non-virtual-dtor -Wno-comment -Wimplicit-fallthrough=3 -Wno-strict-overflow -fdiagnostics-show-option -pthread -fomit-frame-pointer -ffunction-sections -fdata-sections  -msse3 -fvisibility=hidden -fvisibility-inlines-hidden -g  -O0 -DDEBUG -D_DEBUG\n",
+      "    C Compiler:                  /usr/bin/cc\n",
+      "    C flags (Release):           -fsigned-char -ffast-math -fno-finite-math-only -W -Wall -Wreturn-type -Waddress -Wsequence-point -Wformat -Wformat-security -Wmissing-declarations -Wmissing-prototypes -Wstrict-prototypes -Wundef -Winit-self -Wpointer-arith -Wshadow -Wuninitialized -Wno-comment -Wimplicit-fallthrough=3 -Wno-strict-overflow -fdiagnostics-show-option -pthread -fomit-frame-pointer -ffunction-sections -fdata-sections  -msse3 -fvisibility=hidden -O3 -DNDEBUG  -DNDEBUG\n",
+      "    C flags (Debug):             -fsigned-char -ffast-math -fno-finite-math-only -W -Wall -Wreturn-type -Waddress -Wsequence-point -Wformat -Wformat-security -Wmissing-declarations -Wmissing-prototypes -Wstrict-prototypes -Wundef -Winit-self -Wpointer-arith -Wshadow -Wuninitialized -Wno-comment -Wimplicit-fallthrough=3 -Wno-strict-overflow -fdiagnostics-show-option -pthread -fomit-frame-pointer -ffunction-sections -fdata-sections  -msse3 -fvisibility=hidden -g  -O0 -DDEBUG -D_DEBUG\n",
+      "    Linker flags (Release):      -Wl,--exclude-libs,libippicv.a -Wl,--exclude-libs,libippiw.a   -Wl,--gc-sections -Wl,--as-needed -Wl,--no-undefined  \n",
+      "    Linker flags (Debug):        -Wl,--exclude-libs,libippicv.a -Wl,--exclude-libs,libippiw.a   -Wl,--gc-sections -Wl,--as-needed -Wl,--no-undefined  \n",
+      "    ccache:                      NO\n",
+      "    Precompiled headers:         NO\n",
+      "    Extra dependencies:          m pthread cudart_static dl rt nppc nppial nppicc nppidei nppif nppig nppim nppist nppisu nppitc npps cublas cudnn cufft -L/usr/local/cuda-12.2/lib64 -L/usr/lib/x86_64-linux-gnu\n",
+      "    3rdparty dependencies:\n",
+      "\n",
+      "  OpenCV modules:\n",
+      "    To be built:                 aruco bgsegm bioinspired calib3d ccalib core cudaarithm cudabgsegm cudacodec cudafeatures2d cudafilters cudaimgproc cudalegacy cudaobjdetect cudaoptflow cudastereo cudawarping cudev datasets dnn dnn_objdetect dnn_superres dpm face features2d flann freetype fuzzy gapi hfs highgui img_hash imgcodecs imgproc intensity_transform line_descriptor mcc ml objdetect optflow phase_unwrapping photo plot python3 quality rapid reg rgbd saliency shape signal stereo stitching structured_light superres surface_matching text tracking ts video videoio videostab wechat_qrcode xfeatures2d ximgproc xobjdetect xphoto\n",
+      "    Disabled:                    world\n",
+      "    Disabled by dependency:      -\n",
+      "    Unavailable:                 alphamat cannops cvv fastcv hdf java julia matlab ovis python2 sfm viz\n",
+      "    Applications:                tests perf_tests apps\n",
+      "    Documentation:               NO\n",
+      "    Non-free algorithms:         NO\n",
+      "\n",
+      "  GUI:                           GTK2\n",
+      "    GTK+:                        YES (ver 2.24.33)\n",
+      "      GtkGlExt:                  NO\n",
+      "    VTK support:                 NO\n",
+      "\n",
+      "  Media I/O: \n",
+      "    ZLib:                        /usr/lib/x86_64-linux-gnu/libz.so (ver 1.2.11)\n",
+      "    JPEG:                        /usr/lib/x86_64-linux-gnu/libjpeg.so (ver 80)\n",
+      "    WEBP:                        build (ver decoder: 0x0209, encoder: 0x020f, demux: 0x0107)\n",
+      "    AVIF:                        NO\n",
+      "    PNG:                         /usr/lib/x86_64-linux-gnu/libpng.so (ver 1.6.37)\n",
+      "    TIFF:                        build (ver 42 - 4.6.0)\n",
+      "    JPEG 2000:                   build (ver 2.5.3)\n",
+      "    OpenEXR:                     build (ver 2.3.0)\n",
+      "    GIF:                         NO\n",
+      "    HDR:                         YES\n",
+      "    SUNRASTER:                   YES\n",
+      "    PXM:                         YES\n",
+      "    PFM:                         YES\n",
+      "\n",
+      "  Video I/O:\n",
+      "    FFMPEG:                      NO\n",
+      "      avcodec:                   NO\n",
+      "      avformat:                  NO\n",
+      "      avutil:                    NO\n",
+      "      swscale:                   NO\n",
+      "      avresample:                NO\n",
+      "    GStreamer:                   NO\n",
+      "    v4l/v4l2:                    YES (linux/videodev2.h)\n",
+      "\n",
+      "  Parallel framework:            pthreads\n",
+      "\n",
+      "  Trace:                         YES (with Intel ITT(3.25.4))\n",
+      "\n",
+      "  Other third-party libraries:\n",
+      "    Intel IPP:                   2022.0.0 [2022.0.0]\n",
+      "           at:                   /home/primarina314/opencv/build/3rdparty/ippicv/ippicv_lnx/icv\n",
+      "    Intel IPP IW:                sources (2022.0.0)\n",
+      "              at:                /home/primarina314/opencv/build/3rdparty/ippicv/ippicv_lnx/iw\n",
+      "    VA:                          NO\n",
+      "    Lapack:                      NO\n",
+      "    Eigen:                       NO\n",
+      "    Custom HAL:                  YES (ipp (ver 0.0.1))\n",
+      "    Protobuf:                    build (3.19.1)\n",
+      "    Flatbuffers:                 builtin/3rdparty (23.5.9)\n",
+      "\n",
+      "  NVIDIA CUDA:                   YES (ver 12.2, CUFFT CUBLAS FAST_MATH)\n",
+      "    NVIDIA GPU arch:             86\n",
+      "    NVIDIA PTX archs:\n",
+      "\n",
+      "  cuDNN:                         YES (ver 8.9.7)\n",
+      "\n",
+      "  OpenCL:                        YES (no extra features)\n",
+      "    Include path:                /home/primarina314/opencv/3rdparty/include/opencl/1.2\n",
+      "    Link libraries:              Dynamic load\n",
+      "\n",
+      "  Python 3:\n",
+      "    Interpreter:                 /home/primarina314/anaconda3/envs/mrs3/bin/python (ver 3.11.11)\n",
+      "    Libraries:                   /home/primarina314/anaconda3/envs/mrs3/lib/libpython3.11.so (ver 3.11.11)\n",
+      "    Limited API:                 NO\n",
+      "    numpy:                       /home/primarina314/anaconda3/envs/mrs3/lib/python3.11/site-packages/numpy/core/include (ver 1.26.4)\n",
+      "    install path:                lib/python3.11/site-packages/cv2/python-3.11\n",
+      "\n",
+      "  Python (for build):            /home/primarina314/anaconda3/envs/mrs3/bin/python\n",
+      "\n",
+      "  Java:                          \n",
+      "    ant:                         NO\n",
+      "    Java:                        NO\n",
+      "    JNI:                         NO\n",
+      "    Java wrappers:               NO\n",
+      "    Java tests:                  NO\n",
+      "\n",
+      "  Install to:                    /home/primarina314/anaconda3/envs/mrs3\n",
+      "-----------------------------------------------------------------\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-05-02 15:48:59.680409: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2025-05-02 15:48:59.688433: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2025-05-02 15:48:59.688465: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2025-05-02 15:48:59.699801: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2025-05-02 15:48:59.699862: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2025-05-02 15:48:59.699882: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2025-05-02 15:48:59.819412: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2025-05-02 15:48:59.819456: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2025-05-02 15:48:59.819462: I tensorflow/core/common_runtime/gpu/gpu_device.cc:2022] Could not identify NUMA node of platform GPU id 0, defaulting to 0.  Your kernel may not have been built with NUMA support.\n",
+      "2025-05-02 15:48:59.819483: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:887] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2025-05-02 15:48:59.819500: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1929] Created device /device:GPU:0 with 9706 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3060, pci bus id: 0000:01:00.0, compute capability: 8.6\n"
+     ]
+    }
+   ],
    "source": [
     "# from desktop w/ gpu\n",
     "import tensorflow as tf\n",
@@ -31,6 +232,9 @@
     "\n",
     "print(device_lib.list_local_devices() )\n",
     "print(cv2.getBuildInformation())\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
     "\n"
    ]
   },
@@ -144,6 +348,30 @@
    "source": [
     "sr = cv2.dnn_superres.DnnSuperResImpl_create()\n",
     "sr.readModel('models/EDSR_x3.pb')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "24a44acd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "def foo():\n",
+    "    return None, None\n",
+    "\n",
+    "a, b = foo()\n",
+    "print(a)\n",
+    "print(b)\n"
    ]
   },
   {
@@ -311,12 +539,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "5cecdf5d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "restored_img_by_edsr = upscale_img(downscaled_part_path, scaler)\n",
+    "restored_img_by_edsr = upscale_by_edsr(downscaled_part_path, scaler)\n",
     "\n",
     "cv2.imshow('restored_img_by_edsr_only', restored_img_by_edsr)\n",
     "cv2.waitKey(0)\n",
@@ -874,7 +1102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
