add and combine mrs3 restore

--- a/blending.ipynb
+++ b/blending.ipynb
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "512e80be",
    "metadata": {},
    "outputs": [
@@ -371,13 +371,23 @@
     }
    ],
    "source": [
-    "mrs3_compress('Lenna_(test_image).png', 'qwergfhfghgfhgfg', 4, ROI_mode.Polygon)"
+    "mrs3_compress('Lenna_(test_image).png', 'qwergfhfghgfhgfg', 4, ROI_mode.Polygon)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6e2dc65d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mrs3_restore('qwergfhfghgfhgfg', MRS3_mode.edsr, 'qwergfhfghgfhgfg/restored.png')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e2dc65d",
+   "id": "ae501832",
    "metadata": {},
    "outputs": [],
    "source": []
